fix x overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 ::-webkit-scrollbar {
-  width: 2px;
+  width: 4px;
 }
 
 ::-webkit-scrollbar-track {
